# CS4501-Labs

./: .gitattributes  .gitignore  README.md
.github/workflows/: python_executable.yml
lab1_ws/.catkin_tools/profiles/default/: devel_collisions.txt
lab1_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
lab1_ws/devel/.private/catkin_tools_prebuild/: .catkin
lab1_ws/devel/.private/rocketship/: .catkin  local_setup.sh
lab1_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  rocketship.pc
lab1_ws/devel/lib/rocketship/: countdown  main_controller
lab1_ws/logs/rocketship/: build.cmake.000.log.stderr
lab1_ws/src/rocketship/: CMakeLists.txt
lab1_ws/src/rocketship/launch/: rocket.launch
lab1_ws/src/rocketship/src/: countdown.cpp
lab2_ws/lab2_p1_ws/src/rocketship/: package.xml
lab2_ws/lab2_p2_ws/src/misc/: i.launch
lab2_ws/lab2_p2_ws/src/sensor_simulation/: CMakeLists.txt
lab3_ws/.catkin_tools/profiles/default/: devel_collisions.txt
lab3_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
lab3_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
lab3_ws/devel/.private/flightcontroller/: .catkin  setup.sh
lab3_ws/devel/.private/flightgoggles/: .catkin  .rosinstall
lab3_ws/devel/.private/flightgoggles_uav_dynamics/: .catkin  .rosinstall
lab3_ws/src/flightcontroller/: CMakeLists.txt  package.xml
lab3_ws/src/misc/: hztest.launch  test_pid.py
lab3_ws/src/simple_control/: CMakeLists.txt  package.xml
lab4_ws/src/misc/: d.launch  p.launch
lab4_ws/src/sensor_simulation/: package.xml
lab4_ws/src/simple_control/: package.xml
lab4_ws/src/visualizer/: CMakeLists.txt  package.xml
lab5_ws/src/altitude/: CMakeLists.txt
lab5_ws/src/perception/: CMakeLists.txt  package.xml
lab5_ws/src/simple_control/: CMakeLists.txt
lab6_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
lab6_ws/logs/keyboard/: build.cmake.000.log.stderr
lab6_ws/src/misc/: params.launch
lab6_ws/src/simple_control/: package.xml
lab6_ws/src/system_tests/: CMakeLists.txt  package.xml
lab7_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
lab7_ws/src/sensor_simulation/: CMakeLists.txt
lab7_ws/src/visualizer/: CMakeLists.txt
lab8_ws/src/sensor_simulation/: package.xml
project/src/environment_controller/: CMakeLists.txt  package.xml
project/src/environment_controller/src/: environment_controller_node.cpp
project/src/environment_controller/srv/: use_key.srv
project/src/simple_control/: CMakeLists.txt
(+485 files in other folders)
