<?xml version="1.0"?>
<package format="2">
  <name>environment_controller</name>
  <version>0.0.0</version>
  <description>The environment_controller package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>use_key</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>